# mxnet-haskell

./: .gitignore  .travis.yml  stack.yaml
mxnet/: mxnet.cabal
mxnet-examples/: mxnet-examples.cabal
mxnet-examples/apps/mnist/: Dataset.hs  Parse.hs  mnist.hs
mxnet-examples/data/: download-mnist.sh
mxnet/src/MXNet/Core/Base/: HMap.hs  Internal.hs  NDArray.hs  Symbol.hs
mxnet/src/MXNet/Core/Base/Internal/: Raw.chs  TH.hs  TrustPkgs.hs
mxnet/src/MXNet/Core/Base/Internal/TH/: Symbol.hs
mxnet/src/MXNet/Core/NNVM/Internal/: Raw.chs
mxnet/src/MXNet/Core/Predict/Internal/: Raw.chs
mxnet/src/MXNet/Core/Types/: Internal.hs
mxnet/src/MXNet/Core/Types/Internal/: Raw.chs
