name:                       mxnet-examples
version:                    0.2.0.0
synopsis:                   Examples for MXNet in Haskell.
description:                Examples for MXNet in Haskell.
homepage:                   http://github.com/sighingnow/mxnet-haskell#readme
license:                    MIT
license-file:               LICENSE
author:                     Tao He
maintainer:                 sighingnow@gmail.com
copyright:                  Copyright: (c) 2016-2017 Tao He
category:                   Machine Learning
build-type:                 Simple
cabal-version:              >= 1.10

Executable ndarray
    main-is:                ndarray.hs
    hs-source-dirs:         apps
    ghc-options:            -Wall
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5.0
                          , mxnet >= 0.1.0.1

Executable symbol
    main-is:                symbol.hs
    hs-source-dirs:         apps
    ghc-options:            -Wall
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5.0
                          , mxnet >= 0.1.0.1

Executable mnist
    main-is:                mnist.hs
    other-modules:          Parse Dataset
    hs-source-dirs:         apps/mnist
    ghc-options:            -Wall
    default-language:       Haskell2010
    build-depends:          base >= 4.7 && < 5.0
                          , mxnet >= 0.1.0.1
                          , unordered-containers >= 0.2.8
                          , attoparsec >= 0.13
                          , attoparsec-binary >= 0.2
                          , vector >= 0.12
                          , bytestring >= 0.10
                          , resourcet >= 1.1.8
                          , exceptions >= 0.8.3
                          , mmorph >= 1.0.9
                          , mtl >= 2.2.0
                          , streaming >= 0.1.4.5
                          , streaming-utils >= 0.1.4.5
                          , streaming-bytestring >= 0.1.4.5
                          , unordered-containers >= 0.2.7.0
                          , mtl >= 2.2
                          , ghc-prim
